3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix bug #1672117: elves etc don't fire over move_allow flying tiles.
Logic for monster_use_bow() was changed to make monsters fire only
 horizontally/vertically/in diagonals, and also fire over terrain
 they can't cross but which lets an arrow go over.
 server/monster.c
 server/player.c: note about move_type
Nicolas 2007-03-31

Implement feature request #1560387: DM follow command.
 include/player.h sproto.h
 server/c_wiz.c commands.c
 server/server.c: also fix wrong player count with hidden DMs.
Nicolas Weeger 2007-03-25

Fix broken banish command: loop logic was weird (skipping one file?).
 server/ban.c
Nicolas Weeger 2007-03-25

Fix Win32 compilation.
 common/player.c: don't declare variables in the middle of the code
 lib/collect.pl.in: use binmode for files
 socket/item.c: idem
Nicolas Weeger 2007-03-24

server/c_wiz.c: fix missing treasure generation for create command in some cases.
Nicolas Weeger 2007-03-24


Changes for 1.10.0:
------------------------------------------------------------------------------
Fix 'make distclean':
acinclude.m4: Use -I./${srcdir} for crossedit check - otherwise, when
   building in alternate directory, doesn't fine files correctly.
configure.*: Add new makefiles.
check-fragment.am, test/unit/crossedit/Makefile.am,
  test/unit/common/Makefile.am,test/toolkit/Makefile.am: Add support for building in alternate directory, which
   make distclean does - using relative directories to find files
   does not work.  Some files should also be in the buildir, not srcdir.
   Have Makefiels remove .autrun.xml with distclean
Makefile.am: Remove to config files on make distclean