@@ -17,6 +17,14 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix bug #1695764: Charm monsters - shared experience broken.
+Add new share_exp() function, working like change_exp() but party-aware.
+ common/living.c
+ include/libproto.h
+ server/attack.c
+ server/spell_attack.c
+Nicolas Weeger 2007-04-07
+
 Fix bug #1672117: elves etc don't fire over move_allow flying tiles.
 Logic for monster_use_bow() was changed to make monsters fire only
  horizontally/vertically/in diagonals, and also fire over terrain
